test_suite/alan-2022-examples/failing/004850_mutation.alan
source F5 begin leave c6 / get l end
